@@ -4,6 +4,7 @@ SRM (0.5.0-1)
 
   * Introduced srmConnectorGetSubPixel() to retrieve the subpixel layout of a connected display.
   * Added support for gamma correction through srmConnectorGetGammaSize() and srmConnectorSetGamma().
+  * Introduced srmConnectorSetBufferDamageBoxes() to set connector damage using Pixman-style boxes.
 
   # Security Improvements
 
